user.css
/* ... */
.slider-dot:hover {
  border-width: 7px;
}

.progress-bar__slider:active .slider-dot:not(:active) {
  border-width: 4px !important;
}

.slider-dot:active {
  border-width: 4px !important;
}

.main-nowPlayingWidget-nowPlaying>.ellipsis-one-line,
.main-trackInfo-container {
  margin-left: 74px;
  border-radius: var(--border-radius-1)!important;
}

.cover-art{
  background-color: transparent !important;
}

.main-coverSlotExpanded-container {
  position: fixed;
  top: calc(100% - 320px);
  left: calc(100% - 220px);
  width: 200px;
  height: 200px;
  visibility: hidden;
  transform-origin: center;
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
  animation: 1s coverExpandedIn;
  animation-fill-mode: forwards;
  background: none;
  border-radius: var(--border-radius-1)!important;
}

.Q4cc5RktWgz2H8_vDrIS {
  display: none;
  border-radius: var(--border-radius-1)!important;
}

@keyframes coverExpandedIn {
  99% {
    visibility: hidden;
  }
  100% {
    visibility: visible;
  }
}

@keyframes coverExpandedOut {
  99% {
    visibility: visible;
  }
  100% {
    visibility: hidden;
  }
}

.rVxzkDirgkuRPv5V1HYF,
.main-coverSlotCollapsed-container {
  position: fixed;
  top: -12px;
  left: 0px;
  width: 56px;
  height: 56px;
  visibility: visible;
  z-index: 99999 !important;
  border-radius: var(--border-radius-1)!important;
}

.rVxzkDirgkuRPv5V1HYF,
.cover-art .cover-art-image,
.main-coverSlotCollapsed-container {
  transform-origin: center;
  transition-timing-function: ease-in;
  transition: width 0.5s 0.2s, height 0.5s 0.2s, top 0.3s, left 0.5s, box-shadow 0.5s;
  border-radius: var(--border-radius-1)!important;
  background-color: transparent !important;
}

.rVxzkDirgkuRPv5V1HYF[aria-hidden="true"],
.main-coverSlotCollapsed-container[aria-hidden="true"] {
  left: calc(100vw - 178px);
  top: -245px;
  width: 200px;
  height: 200px;
  visibility: hidden;
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
  animation: 1s coverExpandedOut;
  border-radius: var(--border-radius-1)!important;
}

.rVxzkDirgkuRPv5V1HYF[aria-hidden="false"],
.main-coverSlotCollapsed-container[aria-hidden="false"] {
  transition-timing-function: ease-out !important;
  transition: width 0.5s 0.2s, height 0.5s 0.2s, top 0.5s 0.1s, left 0.3s, box-shadow 0.5s !important;
  border-radius: var(--border-radius-1)!important;
}

.rVxzkDirgkuRPv5V1HYF[aria-hidden="true"] .cover-art .cover-art-image,
.main-nowPlayingWidget-coverExpanded .main-coverSlotCollapsed-container .cover-art .cover-art-image {
  width: 200px;
  height: 200px;
  border-radius: var(--border-radius-1)!important;
}

.CoverSlotExpanded__actionButton,
.main-coverSlotCollapsed-expandButton,
.CoverSlotExpanded__actionButton:hover,
.main-coverSlotCollapsed-expandButton:hover,
.kyn0AY4_gXWvbdivdFgP,
.kyn0AY4_gXWvbdivdFgP:hover {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-1)!important;
}

.now-playing-bar .cover-art-image {
  border-radius: var(--border-radius-1);
}

.playback-bar__progress-time,
.main-playbackBarRemainingTime-container {
  color: var(--spice-text) !important;
}

.progress-bar--is-active .progress-bar__slider:focus {
  background-color: var(--spice-accent);
}

.volume-bar {
  margin-right: 8px;
}

.main-skipBackButton-button:hover, .main-skipForwardButton-button:hover, .main-repeatButton-button[aria-checked="false"]:hover, .main-shuffleButton-button:hover {
  background-color: hsla(0,0%,100%,.7) !important;
}

.main-skipBackButton-button:focus:not(:focus-visible):not(:hover), .main-skipForwardButton-button:focus:not(:focus-visible):not(:hover) {
  background-color: var(--spice-text) !important;
}

.main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):hover, .main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):hover {
  background-color: #00cc85 !important;
}

.main-skipBackButton-button:active, .main-skipForwardButton-button:active {
  transform: scale(.89);
  transition: none;
}

.main-playPauseButton-button,
.player-controls__buttons button:not(.main-playPauseButton-button) {
  --button-size: 28px !important;
}

.main-seekBack15sButton-button,
.main-seekForward15sButton-button,
.main-speedControlsButton-button {
  height: auto;
  color: var(--spice-button);
}

.main-playPauseButton-button svg {
  height: 24px;
  width: 24px;
}

.player-controls__buttons {
  margin-bottom: 8px;
  align-items: center;
}

.player-controls__buttons path {
  display: none !important;
}

.player-controls__left, .player-controls__right {
  margin-top: 2px;
}

.player-controls__buttons button {
  padding-left: 20px;
  padding-right: 20px;
}

.main-skipForwardButton-button {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_next_24_filled.svg');
  background-color: var(--spice-text) !important;
  height: 24px !important;
}

.main-skipBackButton-button {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_previous_24_filled.svg');
  background-color: var(--spice-text) !important;
  height: 24px !important;
}

.control-button,
.bxwPwV {
  color:var(--spice-text);
}

.control-button--active{
  color: var(--spice-accent) !important;
  fill:var(--spice-accent) !important;
}
.control-button--active-dot:after{
  background-color: transparent;
}

.mnipjT4SLDMgwiDCEnRC {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_next_24_filled.svg');
  background-color: var(--spice-text) !important;
  height: 22px !important;
}

.fn72ari9aEmKo4JcwteT {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_previous_24_filled.svg');
  background-color: var(--spice-text) !important;
  height: 22px !important;
}
/* ... */

